# eeg_classification

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  README_CIFAR10.md  Test.ipynb  pyproject.toml  requirements.txt  setup.cfg  train_cifar10.py
.continue/rules/: new-rule.md
.github/workflows/: linter.yml  pytest.yml
configs/: cifar10_train.yaml  train.yaml
configs/callbacks/: eeg_default.yaml
configs/cv/: default.yaml
configs/datamodule/: cifar10.yaml  datamodule.yaml  eeg.yaml  h5datamodule.yaml  h5datamodule_multiple.yaml
configs/datamodule/loaders/: eeg_loaders.yaml
configs/datamodule/transforms/: eeg_transforms.yaml
configs/experiment/: eeg_classification.yaml  eeg_classification_cv.yaml  eeg_cv.yaml  eeg_multiclass_classification.yaml
configs/extras/: default.yaml
configs/logger/: comet.yaml  eeg_default.yaml  neptune.yaml  wandb.yaml
configs/module/: cifar10.yaml  eeg.yaml  eeg_single.yaml  single.yaml
configs/module/network/: cifar10.yaml  eeg.yaml  shallow_conv_net.yaml
configs/trainer/: eeg_default.yaml
data/classification/: raw_eegs.parquet  raw_eegs_crops.parquet  raw_eegs_segments.parquet
notebooks/: best_eegnet.pth  dataset_preparation.ipynb  df_ann_info.parquet  eda_eegs.ipynb  test.parquet  train_pipeline.ipynb
notebooks/data_preparation/: eeg_crops_v1.ipynb  raw_classification_v1.ipynb
scripts/: display_eeg.py  plot_eeg.py  plot_preds.py
src/: eval.py  train.py  train_cv.py
src/callbacks/: light_progress_bar.py  wandb_callbacks.py
src/datamodules/: cifar10_datamodule.py  cv_datamodule.py  datamodules.py  datasets.py  mnist_datamodule.py
src/datamodules/components/: dataset.py  eeg_transforms.py  filtered_dataset.py  h5_file.py  indexed_dataset.py  parse.py  transforms.py  utils.py
src/modules/: cifar10_module.py  multiple_module.py  single_module.py
src/modules/components/: grad_cam.py  lit_module.py
src/modules/losses/: losses.py
src/modules/losses/components/: base_loss.py  dice_loss.py  focal_loss.py  focal_loss_with_label_smoothing.py  margin_loss.py  vicreg_loss.py
src/modules/metrics/: __init__.py  eval_metrics.py  metrics.py
src/modules/metrics/components/: __init__.py  classification.py  segmentation.py
src/modules/models/: cifar_net.py  classification.py  eeg_net.py  module.py  reidentification.py  shallow_conv_net.py  small_eeg_net.py
src/utils/: __init__.py  cv_utils.py  env_utils.py  metadata_utils.py  pylogger.py  rich_utils.py  saving_utils.py  utils.py
tests/: conftest.py  test_datamodule.py  test_eval.py  test_eval_metrics_correctness.py  test_light_progress_bar.py  test_load_losses.py  test_load_metrics.py  test_losses_correctness.py  test_metrics_correctness.py  test_models.py  test_sweeps.py  test_train.py  test_utils.py
tests/helpers/: package_available.py  run_if.py  run_sh_command.py
