[project]
name = "eeg-classification"
version = "0.1.0"
description = "EEG Classification Project"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    # --------- pytorch --------- #
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "pytorch-lightning>=2.1.0",
    "torchmetrics>=1.2.0",
    # --------- hydra --------- #
    "hydra-core>=1.3.0",
    "hydra-colorlog>=1.2.0",
    "hydra-optuna-sweeper>=1.2.0",
    # --------- loggers --------- #
    "wandb>=0.16.0",
    # --------- others --------- #
    "pyrootutils>=1.0.0",
    "pre-commit>=3.5.0",
    "rich>=13.0.0",
    "pytest>=7.4.0",
    "sh>=2.0.0; platform_system != 'Windows'",
    "omegaconf>=2.3.0",
    "tqdm>=4.66.0",
    "tensorflow>=2.15.0",
    "pynvml>=11.5.0",
    # --------- data --------- #
    "numpy>=1.24.0",
    "Pillow>=10.0.0",
    "opencv-python-headless>=4.8.0",
    "albumentations>=1.3.0",
    "h5py>=3.9.0",
    # --------- models --------- #
    "timm>=0.9.0",
    "segmentation-models-pytorch>=0.3.0",
    # --------- visualization --------- #
    "seaborn>=0.12.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "ipython>=8.15.0",
    "grad-cam>=1.4.0",
    "ttach>=0.0.3",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
]

[tool.poetry]
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# Add any command-line scripts here
# eeg-train = "src.main:main"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]