[project]
name = "eeg-classification"
version = "1.0.0"
description = "EEG Classification Project"
authors = [
    { name = "Vladislav Degtyarev", email = "v.d.degtyarev@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["pynvml (==13.0.1)", "matplotlib (==3.10.8)", "scikit-learn (==1.8.0)", "segmentation-models-pytorch (==0.5.0)", "timm (==1.0.22)", "sh (==2.2.2)", "nvidia-ml-py (==13.590.44)"]

[project.optional-dependencies]
core = [
    "torch>=2.7.0",
    "torchvision>=0.24.1",
    "pytorch-lightning>=2.6.0",
    "torchmetrics>=1.8.2",
    "hydra-core>=1.3.2",
    "hydra-colorlog>=1.2.0",
    "hydra-optuna-sweeper>=1.2.0",
    "wandb>=0.23.1",
    "nvidia-ml-py>=13.590.44",
    "matplotlib>=3.10.8",
    "scikit-learn>=1.8.0",
]
data = [
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "albumentations>=2.0.8",
]
utils = [
    "pyrootutils>=1.0.4",
    "rich>=14.2.0",
]
dev = [
    "black>=25.12.0",
    "flake8>=7.3.0",
    "mypy>=1.19.0",
    "pre-commit>=4.5.1",
    "pytest>=9.0.0",
    "poetry==2.2.1",
    "sh>=2.2.2"
]

[tool.poetry]
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.13,<3.14"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
show_error_codes = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
